<resources>
    <string name="app_name">smart-farming-scp</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Ingresar">ingresar</string>
    <string name="Registrarse">registrarse</string>
    <string name="social">button_social</string>
    <string name="correohome">Correo</string>
    <string name="proveedor">Proveedor</string>
    <string name="cerrar_session">Cerrar sesión</string>

    <string name="title_activity_menu">menuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="imagegnlogohome">imagegnlogohome</string>
    <string name="home">Home</string>
    <string name="propiedades">Propiedades</string>
    <string name="calendario">Calendario</string>
    <string name="mensajes">Mensajes</string>
    <string name="ajustes">Ajustes</string>
    <string name="login">Logout</string>
    <string name="compartir">Compartir</string>
    <string name="calificanos">calificanos</string>
    <string name="contactanos">contactanos</string>
    <string name="perfil">perfil</string>
    <string name="inventario">Inventario</string>
    <string name="datos_usuario">Datos de Usuarios</string>
    <string name="smart_farming_s_c_p_p">Smart Farming - S.C.P.P</string>
    <string name="by_scp">By SCP</string>
    <string name="by_scp2">By SCP</string>
    <string name="todo">TODO</string>
    <string name="inventario_general">INVENTARIO GENERAL</string>
    <string name="propiedades_inventario">Propiedades</string>
    <string name="demanda">Demanda</string>
    <string name="informe">Informe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Cantidad" />
    <string name="Cantidadp">cantidad</string>
    <string name="CantidadEmbolsados">Cantidad</string>
    <string name="CantidadCultivados">Cantidad</string>
    <string name="GuardarInfo">GUARDAR</string>
    <string name="platanosEmbolsados">PLATANOS EMBOLSADOS</string>
    <string name="platanosCultivados">PLATANOS CULTIVADOS</string>
    <string name="Dia">Dia</string>
    <string name="Mes">Mes</string>
    <string name="Año">Año</string>
    <string name="aaaaa">" "</string>
    <string name="ingrese_la_fecha_de_ingreso_de_datos_con_formato_dd_mm_aaaa">Ingrese la fecha de ingreso de datos con formato dd mm aaaa</string>
    <string name="informacion_zona">INFORMACION ZONA</string>
    <string name="llena_los_campos_vacios_con_0_si_no_hay_informacion_para_actualizar">Llena los campos vacios con \'0\' si no hay informacion para actualizar</string>
    <string name="CANTIDAD_EMBOLSADOS">CANTIDAD EMBOLSADOS</string>
    <string name="llena_los_campos_vacios_con_0_si_no_hay_">Deja los campos vacios si no hay información por actualizar</string>
    <string name="propiedad_n_1">Propiedad N°1</string>
    <string name="total_de_cortes">Total de cortes :</string>
    <string name="total_de_embolsados">Total de embolsados :</string>
    <string name="fecha_de_estimaci_n">Fecha de estimación :</string>
    <string name="propiedad_n_2">Propiedad N°2</string>
    <string name="propiedad_n_3">Propiedad N°3</string>
    <string name="propiedad_n_4">Propiedad N°4</string>
    <string name="cantidad">cantidad</string>
    <string name="cosechaTotal" />
    <string name="AGREGAR">AGREGAR</string>
    <string name="graficar">Graficar</string>
    <string name="valor">Valor</string>
    <string name="Concepto">Concepto</string>
    <string name="ventas">Ventas</string>
    <string name="Cosecha">cosecha</string>
    <string name="prop_inv">PROPIEDADES</string>
    <string name="informe_inv">INFORME</string>
    <string name="estadisticas">ESTADISTICAS</string>
    <string name="propiedadesdeinventario">propiedadesdeinventario</string>
    <string name="informeinventario">informeinventario</string>
    <string name="estadisticapropiedades">estadisticapropiedades</string>
    <string name="genera_tu_pdf">Genera tu PDF!</string>
    <string name="botonparagenerarelpdf">botonparagenerarelpdf</string>
    <string name="revisa_el_total_de_tus_propiedades">REVISA EL TOTAL DE TUS PROPIEDADES</string>
    <string name="genera_tu_informe">Genera tu informe</string>
    <string name="pdf_descargable">PDF descargable</string>
    <string name="logodellogin">logodellogin</string>
    <string name="logodedescarga">logodedescarga</string>
    <string name="datos_del_usuario">DATOS DEL USUARIO</string>
    <string name="propiedad_1">PROPIEDAD 1</string>
    <string name="propietario">Propietario</string>
    <string name="propiedad_2">PROPIEDAD 2</string>
    <string name="esta_aplicaci_n_es_creada_por_smart_farming_con_el_fin_de_facilitar_y_dinamizar_los_procesos_de_la_producci_n_platanera">Esta aplicación es creada por Smart Farming con el fin de facilitar y dinamizar los procesos de la producción platanera</string>
    <string name="bienvenido_a_a_tu_sistema_de_control_de_producci_n_de_platano">BIENVENIDO/A A TU SISTEMA DE CONTROL DE PRODUCCIÓN DE PLATANO</string>
    <string name="imagendehome">imagendehome</string>
    <string name="_20_racimos_400_kg_martes_11">20 racimos (400 kg) Martes 11</string>
    <string name="calendarioTitulo">Calendario</string>

    <string name="platanosCosechados">PLATANOS COSECHADOS</string>
    <string name="info">- Deja los campos vacíos si no hay información de plátanos por ingresar</string>
    <string name="info22">- Ingresa solo números enteros</string>
    <string name="var">RECOMENDACIONES</string>

    <string name="_50_racimos_1000_kg_miercoles_12">-- --</string>

    <string name="total_de_cosechados">Total de cosechados</string>
    <string name="total_de_cosechados2">Total de cosechados</string>
    <string name="GRAFICAR">GRAFICAR</string>
    <string name="agregar">AGREGAR</string>

</resources>