<?xml version="1.0" encoding="utf-8"?>


<menu

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <!-- … 6.1 creo un nuevo icono (el que queira) en drawable->new->vector asset … -->
    <!-- … 6.1.2 ventanas relacionadas con el proyecto … -->

    <item
        android:id="@+id/activid_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        />
    <item
        android:id="@+id/activid_Propiedad"
        android:icon="@drawable/propiedades"
        android:title="@string/propiedades"/>
    <item
        android:id="@+id/activid_inventario"
        android:icon="@drawable/inventario"
        android:title="@string/inventario"/>


    <item
        android:id="@+id/activid_Calendario"
        android:icon="@drawable/calendario"
        android:title="@string/calendario"/>



    <!-- … 6.1.2 ventanas relacionadas con el usuario … -->
    <item android:title="@string/perfil">

        <menu>
            <item
                android:id="@+id/buttonOutSession"
                android:icon="@drawable/login"
                android:title="@string/login"/>
            <item
                android:id="@+id/nav_gallery"
                android:icon="@drawable/user"
                android:title="@string/datos_usuario" />
        </menu>
    </item>

</menu>