<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DemandaInventario">

    <EditText
        android:id="@+id/concepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="Concepto"
        android:hint="@string/Concepto"
        android:inputType="text"
        android:textColorHint="#546E7A"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="Valor"
        android:hint="@string/valor"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botonAgregar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/agregar"
        android:background="@drawable/button_rounded_border"/>

    <Button
        android:id="@+id/botonGraficar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="190dp"
        android:text="@string/graficar"
        android:background="@drawable/button_rounded"/>

    <com.echo.holographlibrary.BarGraph
        android:id="@+id/graphBar"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp" />


</FrameLayout>