<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EstadisticaInventario">

    <EditText
        android:id="@+id/concepto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="Concepto"
        android:hint="@string/Concepto"
        android:inputType="text"
        android:textColorHint="#546E7A"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:autofillHints="Valor"
        android:hint="@string/valor"
        android:textColor="@color/black"
        android:inputType="number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/botonGrficar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="170dp"
        android:background="@drawable/button_rounded_border"
        android:text="@string/GRAFICAR"
        android:textColor="@color/verdeoscuro" />

    <com.echo.holographlibrary.BarGraph
        android:id="@+id/graphBar"
        android:layout_width="match_parent"
        android:layout_height="341dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="250dp" />

    <Button
        android:id="@+id/buttonAgregar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:background="@drawable/button_rounded"
        android:text="@string/agregar" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="610dp"
        android:text="Grafica tus ventas y pendientes en base a tu inventario"
        android:textStyle="italic"/>


</FrameLayout>