<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PropiedadesInventario">

    <!-- TODO: Update blank fragment layout -->
    <!-- … <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="TAB 1 "
        android:gravity="center"
        android:textColor="@color/black"/> -->


    <LinearLayout
        android:id="@+id/Propiedad1"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginTop="2dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propiedad_n_1"
            android:textColor="@color/verdeoscuro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TTcorte"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_cortes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/TTembolsado"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_embolsados"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/FechaEx"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_de_estimaci_n"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/Propiedad2"
        android:layout_width="match_parent"
        android:layout_height="156dp"
        android:layout_marginTop="155dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propiedad_n_2"
            android:textColor="@color/verdeoscuro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TTcorte2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_cortes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/TTembolsado2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_embolsados"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/FechaEx2"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_de_estimaci_n"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Propiedad3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="308dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propiedad_n_3"
            android:textColor="@color/verdeoscuro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TTcorte3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_cortes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/TTembolsado3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_embolsados"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/FechaEx3"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_de_estimaci_n"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Propiedad4"
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:layout_marginTop="455dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/propiedad_n_4"
            android:textColor="@color/verdeoscuro"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TTcorte4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_cortes"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/TTembolsado4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/total_de_embolsados"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/FechaEx4"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/fecha_de_estimaci_n"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="italic" />

    </LinearLayout>
</FrameLayout>
