<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible">


    <Button
        android:id="@+id/botonPropiedad2"
        android:layout_width="210dp"
        android:layout_height="94dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/verdebloque"
        android:text="@string/propiedad_2"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonPropiedad1" />

    <TextView
        android:id="@+id/txtDatosUsuario"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:background="@android:drawable/gallery_thumb"
        android:backgroundTint="@color/verde"
        android:gravity="center"
        android:text="@string/datos_del_usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/txtnombre"
        android:layout_width="290dp"
        android:layout_height="30dp"
        android:gravity="center"
        android:text=" "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDatosUsuario"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/botonPropiedad1"
        android:layout_width="210dp"
        android:layout_height="94dp"
        android:layout_marginTop="220dp"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/verdebloque"
        android:text="@string/propiedad_1"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botonmas"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:background="@drawable/button_rounded"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:srcCompat="@drawable/add"
        tools:ignore="SpeakableTextPresentCheck"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/txtpropietario"
        android:layout_width="192dp"
        android:layout_height="27dp"
        android:text="@string/propietario"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/txtnombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>